pod-security/baseline/restrict-sysctls/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict-sysctls.yaml
assert:
- policy-assert.yaml
