pod-security/baseline/restrict-sysctls/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-sysctls.yaml | kubectl apply -f -
