pod-security/baseline/restrict-sysctls/e2e/bad-pod.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: kernel.shm_next_id
      value: "4"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
    - name: kernel.shm_next_id
      value: "4"
